--- a/index.html
+++ b/index.html
@@ -14,11 +14,22 @@
   </div>
 </body>
 <script>
-  Telegram.WebApp.ready(); // 初始化
+  // Init TWA
+  Telegram.WebApp.ready();
 
-  document.getElementById('closeBtn').addEventListener('click', () => {
-    Telegram.WebApp.close(); // 关闭 MiniApp
+  // Event occurs whenever theme settings are changed in the user's Telegram app (including switching to night mode).
+  Telegram.WebApp.onEvent('themeChanged', function () {
+    document.documentElement.className = Telegram.WebApp.colorScheme;
   });
+
+  // Show main button
+  Telegram.WebApp.MainButton.setParams({
+    text: 'Main Button'
+  });
+  Telegram.WebApp.MainButton.onClick(function () {
+    Telegram.WebApp.showAlert('Main Button was clicked')
+  });
+  Telegram.WebApp.MainButton.show();
 </script>
 
 </html>
