--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/miniApp/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
-  <script type="module" crossorigin src="/miniApp/index.iCi7B7U8.js"></script>
+  <script type="module" crossorigin src="/index.D84G_H2B.js"></script>
 </head>
 
 <body>
