--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/miniApp/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
-  <script type="module" crossorigin src="/miniApp/index.D4QQXxrH.js"></script>
+  <script type="module" crossorigin src="/miniApp/index.yooYCmlY.js"></script>
+  <link rel="stylesheet" crossorigin href="/miniApp/index.9hrNx2e-.css">
 </head>
 
 <body>
